--- a/index.html
+++ b/index.html
@@ -53,6 +53,82 @@
     .wrap{ display:block; min-height:100svh }
     .content-wrap { padding: 0 clamp(16px, 6vw, 96px); max-width: 1400px; margin: 0 auto; width: 100%; }
 
+    /* ===== POPUP SYSTEM ===== */
+    #geo-popup {
+      position: fixed;
+      bottom: 30px;
+      right: 30px;
+      width: 320px;
+      background: var(--card);
+      border: 1px solid var(--line);
+      border-radius: 20px;
+      box-shadow: 0 15px 40px rgba(0,0,0,0.15);
+      z-index: 10000;
+      padding: 24px;
+      transition: all 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+      transform: translateY(150%) scale(0.8);
+      opacity: 0;
+    }
+
+    #geo-popup.show {
+      transform: translateY(0) scale(1);
+      opacity: 1;
+    }
+
+    #geo-popup.minimized {
+      width: 60px;
+      height: 60px;
+      padding: 0;
+      border-radius: 50%;
+      cursor: pointer;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      overflow: hidden;
+    }
+
+    .popup-content { transition: opacity 0.3s; }
+    #geo-popup.minimized .popup-content { opacity: 0; pointer-events: none; display: none; }
+
+    /* Ändrad font-size för att SEO ska få plats i ikonen */
+    .minimized-icon {
+      display: none;
+      font-size: 14px; 
+      font-weight: 800;
+      color: var(--red-accent);
+      letter-spacing: 0.05em;
+    }
+    #geo-popup.minimized .minimized-icon { display: block; }
+
+    .close-trigger {
+      position: absolute;
+      top: 12px;
+      right: 12px;
+      font-size: 18px;
+      cursor: pointer;
+      color: var(--muted);
+      background: none;
+      border: none;
+      line-height: 1;
+    }
+
+    .popup-kicker { font-size: 10px; letter-spacing: 0.2em; text-transform: uppercase; color: var(--red-accent); font-weight: 700; margin-bottom: 8px; }
+    .popup-title { font-family: 'Playfair Display', serif; font-size: 20px; margin: 0 0 12px 0; line-height: 1.2; color: var(--fg); }
+    .popup-btn { 
+      display: block; 
+      background: var(--fg); 
+      color: var(--bg); 
+      text-align: center; 
+      padding: 12px; 
+      border-radius: 30px; 
+      font-size: 12px; 
+      font-weight: 700; 
+      text-transform: uppercase; 
+      margin-top: 15px; 
+      transition: opacity 0.3s;
+    }
+    .popup-btn:hover { opacity: 0.8; }
+
     /* ===== NAVIGATION ===== */
     .top-location{ position:fixed; top:0; left:0; right:0; z-index:9999; border-bottom:1px solid var(--line); background:rgba(247, 247, 247, 0.8); backdrop-filter: blur(10px); }
     .topbar{ display:flex; justify-content:center; align-items:center; padding:16px 24px; }
@@ -156,6 +232,7 @@
       .hero-container { flex-direction: column; gap: 20px; }
       .hero-container .btn, .cv-options { order: 2; width: 220px; justify-content: center; }
       .hero-credentials { order: 1; }
+      #geo-popup { right: 20px; bottom: 20px; width: calc(100% - 40px); }
     }
 
     /* ===== ABOUT SECTION ===== */
@@ -197,7 +274,7 @@
     .banner-section {
       width: 100vw;
       position: relative;
-      background: var(--bg); /* Matchar nu din hemsidas bakgrund */
+      background: var(--bg);
       display: flex;
       align-items: center;
       justify-content: center;
@@ -280,6 +357,17 @@
 </head>
 <body>
   <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KBG4JPKN" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  
+  <div id="geo-popup" onclick="handlePopupClick(event)">
+    <button class="close-trigger" onclick="minimizePopup(event)">×</button>
+    <div class="minimized-icon">SEO</div> <div class="popup-content">
+      <div class="popup-kicker">Built by me</div>
+      <h3 class="popup-title">SEO & GEO Deep Analyzer</h3>
+      <p style="font-size: 13px; color: var(--muted); margin-bottom: 12px;">Get insights into how AI-engines perceive your brand.</p>
+      <a href="https://tovapersson.github.io/seo-geo-checker/" class="popup-btn" onclick="trackPopupClick()">Try it out</a>
+    </div>
+  </div>
+
   <div class="top-location">
     <div class="topbar">
       <nav class="topmenu">
@@ -418,6 +506,29 @@
   <script>
     document.getElementById('year').textContent = new Date().getFullYear();
 
+    // ===== POPUP LOGIC =====
+    window.onload = function() {
+      setTimeout(() => {
+        document.getElementById('geo-popup').classList.add('show');
+      }, 2500);
+    };
+
+    function minimizePopup(e) {
+      e.stopPropagation();
+      document.getElementById('geo-popup').classList.add('minimized');
+    }
+
+    function handlePopupClick(e) {
+      const popup = document.getElementById('geo-popup');
+      if (popup.classList.contains('minimized')) {
+        popup.classList.remove('minimized');
+      }
+    }
+
+    function trackPopupClick() {
+      window.dataLayer.push({'event': 'popup_click', 'tool': 'geo_analyzer'});
+    }
+
     function toggleCV(position) {
         const mainBtn = document.getElementById(`cv-main-btn-${position}`);
         const options = document.getElementById(`cv-options-${position}`);
@@ -432,11 +543,11 @@
     }
 
     function trackDownload(lang) {
-        window.dataLayer.push({
-            'event': 'lead_magnet_download',
-            'language': lang,
-            'file_type': 'pdf'
-        });
+      window.dataLayer.push({
+          'event': 'lead_magnet_download',
+          'language': lang,
+          'file_type': 'pdf'
+      });
     }
 
     (function trackProjectClicks() {
