fix: update model name

--- a/index.html
+++ b/index.html
@@ -412,12 +412,12 @@
   <!-- SEO Popup -->
   <div id="geo-popup" onclick="handlePopupClick(event)">
     <button class="close-trigger" onclick="minimizePopup(event)">×</button>
-    <div class="minimized-icon">SEO</div>
+    <div class="minimized-icon">GEO</div>
     <div class="popup-content">
       <div class="popup-kicker">Built by me</div>
-      <h3 class="popup-title">SEO & GEO Deep Analyzer</h3>
+      <h3 class="popup-title">GEO Deep Analyzer</h3>
       <p style="font-size: 13px; color: var(--muted); margin-bottom: 12px;">Get insights into how AI-engines perceive your brand.</p>
-      <a href="https://tovapersson.github.io/seo-geo-checker/" class="popup-btn" onclick="trackPopupClick()">Try it out</a>
+      <a href="https://snazzy-palmier-6ffedd.netlify.app" class="popup-btn" onclick="trackPopupClick()">Try it out</a>
     </div>
   </div>
 
